# IfcGenerator

./: .gitignore  AGENTS.md  LICENSE  PLANS.md  README.md  deep-research-report.md  pyproject.toml
.github/workflows/: ci.yml
docs/: multi-storey-layout-strategy.md  runtime-walkthrough.md
output/: sample.ifc
sample/: sample.ttl  sbco_example.ttl
tests/: test_end_to_end.py  test_layout.py  test_rdf.py  test_rollout_safety.py  test_validate_checks.py  test_validate_reports.py
tests/fixtures/: minimal.ttl  multi_core_highrise.ttl  sbco_equipment.ttl  sbco_minimal.ttl  sbco_missing_name.ttl  six_storey_with_elevator.ttl  two_storey.ttl  two_storey_with_stair.ttl
topo2ifc/: __init__.py  cli.py  config.py
topo2ifc/geometry/: __init__.py  doors.py  geom2d.py  slabs.py  walls.py
topo2ifc/ifc/: __init__.py  exporter.py  ifc_context.py  psets.py
topo2ifc/layout/: __init__.py  postprocess.py  solver_base.py  solver_heuristic.py  solver_ortools.py
topo2ifc/rdf/: __init__.py  loader.py  vocabulary.py
topo2ifc/topology/: __init__.py  graph.py  model.py
topo2ifc/validate/: __init__.py  checks.py  reports.py
