[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "topo2ifc"
version = "0.1.0"
description = "RDF topology to IFC automatic generation (HVAC digital twin)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "rdflib>=7.0",
    "networkx>=3.0",
    "shapely>=2.0",
    "numpy>=1.24",
    "ifcopenshell",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ortools = ["ortools>=9.0"]
dev = [
    "pytest>=7.0",
]

[project.scripts]
topo2ifc = "topo2ifc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["topo2ifc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
